--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-# api keys
+
+# API keys and sensitive files
 .env
+
+# Firebase related files and folders
+.firebase
+.firebaserc
+/hosting.zglzda.cache
+/functions/node_modules
+/.runtimeconfig.json
+/firebase-debug.log
+
 # Firebase Firestore security rules
 database.rules.json
